unpackaged/main/default/objects/Project__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The due date, based on the max milestone due date.</description>
    <inlineHelpText>The due date, based on the max milestone due date.</inlineHelpText>
    <label>Due Date</label>
    <summarizedField>Milestone__c.Due_Date__c</summarizedField>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>