unpackaged/main/default/objects/Project__c/fields/Expected_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Due_Date__c</fullName>
    <description>What is the expected finish date of this project?</description>
    <inlineHelpText>What is the expected finish date of this project?</inlineHelpText>
    <label>Expected Due Date</label>
    <type>Date</type>
</CustomField>