unpackaged/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Project status, based on the percentage complete.</description>
    <formula>IF  (Percentage_Complete__c == 0, &quot;Not Started&quot;, 
    IF(Percentage_Complete__c == 1, &quot;Complete&quot;, 
        &quot;In Progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project status, based on the percentage complete.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>