unpackaged/main/default/objects/Project__c/fields/Total_Number_of_Completed_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Completed_Milestones__c</fullName>
    <description>Summarise the total number of completed milestones related to this Project.</description>
    <inlineHelpText>Summarised total number of completed milestones related to this Project.</inlineHelpText>
    <label>Total Number of Completed Milestones</label>
    <summaryFilterItems>
        <field>Milestone__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>