unpackaged/main/default/objects/Project__c/fields/Total_Number_of_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Milestones__c</fullName>
    <description>Summarise the total number of milestones related to this Project.</description>
    <inlineHelpText>Summarised count of the total number of milestones related to this Project.</inlineHelpText>
    <label>Total Number of Milestones</label>
    <summaryForeignKey>Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>