unpackaged/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Number_of_Milestones__c</columns>
    <columns>Total_Number_of_Completed_Milestones__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>#1 - All Projects</label>
</ListView>