unpackaged/main/default/objects/Project__c/listViews/Completed_Projects.listView-meta.xml
<ListView>
    <fullName>Completed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Total_Number_of_Milestones__c</columns>
    <columns>Total_Number_of_Completed_Milestones__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>#4 - Completed Projects</label>
</ListView>